--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="root" class="flex justify-center items-center h-screen w-screen box-border font-nunito"></div>
+    <div id="root" class="flex justify-center items-center h-screen w-screen box-border font-nunito break-words"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
 
