--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="root"
-        class="flex justify-center items-center h-screen w-screen box-border font-nunito break-words bg-bg-primary text-txt-primary">
+        class="flex justify-center items-center h-screen w-screen box-border font-nunito break-words bg-main-bg-image bg-cover bg-no-repeat text-txt-primary">
     </div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
