--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="root"
-        class="flex justify-center items-center h-[100dvh] w-[100dvw] box-border font-nunito break-words bg-main-bg-image bg-cover bg-no-repeat text-txt-primary">
+        class="flex justify-center items-center h-[100dvh] w-[100dvw] box-border font-nunito break-words bg-bg-secondary text-txt-primary">
     </div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
